# projektarbeit-ii-team-6

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake.yml
assets/: CombatBackground.aseprite  TilesetMockup.aseprite  hub_test.aseprite
assets/Entities/: smithlr.aseprite
assets/Levels/: Tilemap.json  Tileset.json
assets/Tilemaps/: Debugmap.json  Debugmap.tmj  Debugmap_without_chunks.json  Debugmap_without_chunks.tmj  Hub.tmj  HubTest.tmj  Level1.tmj  Level2.tmj  golem.tsj  hub_test.tmj  level1.tmj  level1chunks.tmj  level1chunks.tmx  level1chunks_mockup.tmj
assets/Tilesets/: Bottombar.tsj  Floor.json  Floor.tsj  FloorMud.tsj  FogWood.tsj  HouseRoof.aseprite  HouseRoof.tsj  Hub.tsj  HubTest.tsj  Plank.tsj  Planks.json  Props.tsj  StuffThatIsAboveNPCs.tsj  Wall.tsj  Walls.json  bodenleisten.tsj  bottombar.tsj  doorDown.tsj  doorLeft.tsj  doorRight.tsj  doorUp.tsj  flora.tsj  fog.tsj  fog_wood.tsj  hub_test.aseprite  hub_test.tsj  mud_bodenleisten.tsj  mud_bottombar.tsj  mud_floor.tsj  nebel.tsj  nebel_holz.tsj  plank.tsj  props.tsj  stuffThatIsAboveNPCs.tsj
assets/Tilesets/Entities/: Golem.tsj  ImpFire.tsj  ImpPlant.tsj  ImpWater.tsj  Slime.tsj  Wendigo.tsj
assets/Tilesets/entities/: Cultist.tsj  FeuerElementar.tsj  Fledermaus.tsj  PflanzenElementar.tsj  Slime.tsj  WasserElementar.tsj  Wendigo.tsj  bat.tsj  cultist.tsj  fire_imp.tsj  golem.tsj  plant_imp.tsj  slime.tsj  water_imp.tsj  wendigo.tsj
assets/UI/Combat/: DebuffStacks.aseprite  Debuff_Buff_Cooldown.aseprite  Debuffs.aseprite  UI_Mockup.aseprite
cmake/: Findnlohmann_json.cmake  Findraylib.cmake
src/: Character.cpp  Character.h  Entity.h  Game.cpp  Game.h  Scene.cpp  Scene.h  main.cpp
src/Characters/: MainChar.cpp  MainChar.h
src/Entities/: Character.cpp  Character.h  Weapon.h
src/Game/: Game.cpp  Game.h  Scene.cpp  Scene.h  main.cpp
src/Game/Objects/: Bat.cpp  Cactus.cpp  Cactus.h  Character.cpp  Character.h  Cultist.cpp  Cultist.h  LoadLevel.cpp  LoadLevel.h  Mud.cpp  Mud.h  NPC.cpp  NPC.h  Slime.cpp  Slime.h  Spikes.cpp  Spikes.h  Torch.cpp  Torch.h  UpgradeStation.cpp  UpgradeStation.h  Wall.cpp  Wall.h
src/Game/Objects/Enemies/: Bat.cpp  Bat.h  Cultist.cpp  Cultist.h  Enemy.cpp  Enemy.h  Slime.cpp  Slime.h
src/Game/Objects/Types/: Collidable.h
src/Game/Objects/Weapons/: Blooddagger.cpp  Blooddagger.h  Bloodstaff.cpp  Bloodstaff.h  Druidstaff.cpp  Druidstaff.h  Druidtalisman.cpp  Druidtalisman.h  Firestaff.cpp  Firestaff.h  Firesword.cpp  Firesword.h  Icespear.cpp  Icespear.h  Ironhammer.cpp  Ironhammer.h  Staffofearth.cpp  Staffofearth.h  Waterstaff.cpp  Waterstaff.h  Weapon.h
src/Game/Scenes/: CombatScene.cpp  CombatScene.h  DebugScene.cpp  DebugScene.h  MainMenu.cpp  MainMenu.h  PauseScene.cpp  PauseScene.h  SettingsMenu.cpp  SettingsMenu.h  TiledScene.cpp  TiledScene.h
src/Graphics/: Tilemap.cpp  Tilemap.h  Tileset.cpp  Tileset.h
src/Objects/: Character.cpp  Character.h  Slime.cpp  Slime.h  Spikes.cpp  Spikes.h  Torch.cpp  Torch.h  UpgradeStation.cpp  UpgradeStation.h  Wall.cpp  Wall.h
src/Objects/Items/: Item.h
src/Objects/Types/: Collidable.h
src/Raylib/: Button.cpp  Button.h  Slider.cpp  Slider.h  Tileset.cpp  Tileset.h  Toggle.cpp  Toggle.h
src/Scenes/: DebugScene.cpp  DebugScene.h  MainMenu.cpp  MainMenu.h
src/Tiled/: Chunk.cpp  Chunk.h  Layer.cpp  Layer.h  Map.cpp  Map.h  Object.cpp  Object.h  Property.cpp  Property.h
